Fix sidebar height issue
Fixed an issue where the sidebar was cut off (overflowed on Y). Header height wasn't being correctly considered when determining sidebar height without the footer image.

--- a/RocketChatInverted.css
+++ b/RocketChatInverted.css
@@ -477,15 +477,15 @@ aside .footer {
 }
 
 .side-nav .rooms-list {
-    height: calc(100% - 0px);
+    height: calc(100% - 60px);
 }
 
 .account-box .options {
-    height: calc(100% - 0px);
+    height: calc(100% - 60px);
 }
 
 .flex-nav .content {
-    height: calc(100% - 0px);
+    height: calc(100% - 60px);
 }
 
 
